# enterprise-agent-academy

./: .gitignore  main.py  pyproject.toml
apps/meridian_core/: output_parser.py  schemas.py
apps/platform_check/: main.py  requirements.txt
docs/: ARCHITECTURE_ADR_01.md  STRUCTURED_OUTPUT_REBUTTAL.md  WK01_FAILURE_MAP.md
docs/checkpoints/: WK01_CHECKPOINT_DEFENSE.md  WK01_RED_TEAM_DELTA.md  WK02_CHECKPOINT_DEFENSE.md  WK02_RED_TEAM_DELTA.md
evals/prompting/: context_pressure_experiment.csv  run_context_overflow.py  run_context_pressure.py
infra/: RESOURCE_INVENTORY.md
prompts/: PROMPT_ASSUMPTIONS.md
prompts/versions/: SYS_COMPLIANCE_V1_0_0.md  SYS_COMPLIANCE_V1_0_0_shots.json  SYS_COMPLIANCE_V1_1_0.md
tests/prompting/: schema_break_cases.py
